ros2_ws/log/build_2020-10-15_05-34-51/py_pubsub/stderr.log
  File "/home/shorouk/ros2_ws/install/py_pubsub/lib/python3.6/site-packages/py_pubsub/publisher_member_function.py", line 8
    char* file_path = r'/home/shorouk/ros2_ws/src/py_pubsub/py_pubsub/1.png'
                                                                           ^
SyntaxError: can't assign to operator

